--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -37,6 +37,10 @@ jobs:
         run: pnpm install
         working-directory: ./
 
+      - name: Checking ESLint with Next.js
+        run: pnpm run lint
+        working-directory: ./
+
       - name: Build with Next.js
         run: pnpm run build
         working-directory: ./
