--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mysql2": "^3.15.3",
     "next": "16.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-loader-spinner": "^8.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
