--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
     "next": "16.0.0",
+    "nodemailer": "^7.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-loader-spinner": "^8.0.0"
@@ -21,6 +22,7 @@
     "@eslint/js": "^9.39.1",
     "@next/eslint-plugin-next": "^15.5.6",
     "@types/node": "^20.19.25",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
