--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
     "next": "16.0.0",
@@ -21,6 +22,7 @@
     "@eslint/eslintrc": "^3.3.3",
     "@eslint/js": "^9.39.1",
     "@next/eslint-plugin-next": "^15.5.6",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20.19.25",
     "@types/nodemailer": "^7.0.4",
     "@types/react": "^19.2.7",
