--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "hamburger-react": "^2.5.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
     "next": "16.0.0",
     "nodemailer": "^7.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-loader-spinner": "^8.0.0"
+    "react-loader-spinner": "^8.0.0",
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
     "@eslint/js": "^9.39.1",
     "@next/eslint-plugin-next": "^15.5.6",
     "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.25",
     "@types/nodemailer": "^7.0.4",
     "@types/react": "^19.2.7",
