--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-loader-spinner": "^8.0.0",
+    "react-markdown": "^10.1.0",
     "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
