--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react-dom": "19.2.1",
 		"react-loader-spinner": "^8.0.0",
 		"react-markdown": "^10.1.0",
+		"recharts": "^3.5.1",
 		"sweetalert2": "^11.26.4"
 	},
 	"devDependencies": {
