--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"lint": "eslint"
 	},
 	"dependencies": {
+		"@react-three/drei": "^10.7.7",
+		"@react-three/fiber": "^9.4.2",
 		"@supabase/supabase-js": "^2.87.1",
 		"bcrypt": "^6.0.0",
 		"hamburger-react": "^2.5.2",
@@ -21,7 +23,8 @@
 		"react-loader-spinner": "^8.0.0",
 		"react-markdown": "^10.1.0",
 		"recharts": "^3.5.1",
-		"sweetalert2": "^11.26.4"
+		"sweetalert2": "^11.26.4",
+		"three": "^0.182.0"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.3.3",
@@ -33,6 +36,7 @@
 		"@types/nodemailer": "^7.0.4",
 		"@types/react": "^19.2.7",
 		"@types/react-dom": "^19.2.3",
+		"@types/three": "^0.182.0",
 		"@typescript-eslint/eslint-plugin": "^8.49.0",
 		"@typescript-eslint/parser": "^8.49.0",
 		"baseline-browser-mapping": "^2.9.6",
