--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -41,6 +41,6 @@ jobs:
         run: pnpm run lint
         working-directory: ./
 
-      # - name: Build with Next.js
-      #   run: pnpm run build
-      #   working-directory: ./
+      - name: Build with Next.js
+        run: pnpm run build
+        working-directory: ./
