--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build 2>/dev/null",
+		"build": "next build",
 		"start": "next start",
 		"lint": "eslint"
 	},
@@ -39,7 +39,6 @@
 		"@types/three": "^0.182.0",
 		"@typescript-eslint/eslint-plugin": "^8.56.1",
 		"@typescript-eslint/parser": "^8.56.1",
-		"baseline-browser-mapping": "^2.10.0",
 		"eslint": "^9.39.3",
 		"eslint-config-next": "16.0.0",
 		"eslint-import-resolver-alias": "^1.1.2",
